--- a/.gitattributes
+++ b/.gitattributes
@@ -1400,7 +1400,7 @@ installer/schema/20101028_p_invit_tiki.sql -text
 installer/schema/20101203_fgal_archive_default_tiki.sql -text
 installer/schema/20110104_sefurl_trackeritem_tiki.sql -text
 installer/schema/20110413_blog_post_priv_default_value_tiki.sql -text
-installer/schema/20110610_readd_sefurl_index_left_tiki.sql -text
+installer/schema/20110610_readd_sefurl_index_left_tiki.php -text
 installer/schema/20110615_structure_alias_tiki.sql -text
 installer/schema/99999999_image_plugins_kill_tiki.php -text
 installer/schema/index.php -text
