[QT] Quality Team Backport
r36606 | sylvieg | 2011-08-29 20:16:46 +0200 (Mon, 29 Aug 2011) | 1 line
[bp/r36603][FIX]section layout: display the prefs
r36641 | xavidp | 2011-08-30 12:41:35 +0200 (Tue, 30 Aug 2011) | 1 line
[bp/r36639][FIX]Hide 'articles' hardcoded title + 2 action buttons next to it when articles are shown through PluginArticles and actions are requested to be hidden, for better customization of articles display within a custom wiki page
r36651 | sylvieg | 2011-08-30 17:30:10 +0200 (Tue, 30 Aug 2011) | 1 line
[bp/r 36649][FIX]{{page}}: a page with {include page=included} and the page 'included' is a (trackerlist filtervalue={{page}}), the {{Page}} must be parsed and not keep to {{page}}
r36660 | robertplummer | 2011-08-30 18:43:46 +0200 (Tue, 30 Aug 2011) | 1 line
[ENH] Brought sheet to latest that was in 7.x in order to fix many outstanding issues.  More to come.
r36662 | xavidp | 2011-08-30 18:48:24 +0200 (Tue, 30 Aug 2011) | 1 line
[bp/r36655][FIX]messu-compose: a user name is not only limitted to alnum. Thanks sylvieg
r36673 | robertplummer | 2011-08-30 19:35:17 +0200 (Tue, 30 Aug 2011) | 1 line
[ENH] Added new external locations for sheet and s5

--- a/.gitattributes
+++ b/.gitattributes
@@ -4626,6 +4626,7 @@ templates/tiki-galleries.tpl -text
 templates/tiki-gmap_locator.tpl -text
 templates/tiki-gmap_usermap.tpl -text
 templates/tiki-graph-sheets.tpl -text
+templates/tiki-history_sheets.php -text
 templates/tiki-history_sheets.tpl -text
 templates/tiki-ical.tpl -text
 templates/tiki-import-sheets.tpl -text
