[QT] Quality Team Backport
r36674 | robertplummer | 2011-08-30 19:41:43 +0200 (Tue, 30 Aug 2011) | 2 lines
[FIX] Locations for sheet dependencies.
[FIX] Brought the external jquery.sheet_tiki for mods from 7 model
r36676 | robertplummer | 2011-08-30 20:19:47 +0200 (Tue, 30 Aug 2011) | 2 lines
[FIX] Removed slideshow call from tiki-setup.php to make it less invasive
[ENH] Backported slideshow fixes from 7
r36683 | sylvieg | 2011-08-30 21:05:01 +0200 (Tue, 30 Aug 2011) | 1 line
[bp/r36682][FIX]article: switch off need to confirm

--- a/.gitattributes
+++ b/.gitattributes
@@ -3092,6 +3092,7 @@ lib/wiki-plugins/wikiplugin_sharethis.php -text
 lib/wiki-plugins/wikiplugin_sheet.php -text
 lib/wiki-plugins/wikiplugin_showpages.php -text
 lib/wiki-plugins/wikiplugin_skype.php -text
+lib/wiki-plugins/wikiplugin_slideshow.php -text
 lib/wiki-plugins/wikiplugin_smarty.php -text
 lib/wiki-plugins/wikiplugin_snarf.php -text
 lib/wiki-plugins/wikiplugin_sort.php -text
