[QT] Quality Team Backport
r37341 | sylvieg | 2011-09-16 22:25:15 +0200 (Fri, 16 Sep 2011) | 1 line
local to 6 - regression from 5: TRACKER for a new item for a field only visible for creator and admin must be visible
r37381 | jyhem | 2011-09-18 17:56:49 +0200 (Sun, 18 Sep 2011) | 1 line
[ENH bp/37380] Allow IP banning of multiple spammers in a practical way (no cut-pasting, less clicks and multiple selection) to cope with recent changes in spammer behaviour
r37386 | jyhem | 2011-09-18 19:08:11 +0200 (Sun, 18 Sep 2011) | 1 line
[ENH bp/37385] Allow combined delete and IP ban of multiple spam comments (improves on 37381)
r37388 | jyhem | 2011-09-18 19:37:04 +0200 (Sun, 18 Sep 2011) | 1 line
[ENH bp/37385] Oup! Should have been part of 37386
r37390 | jyhem | 2011-09-18 19:47:40 +0200 (Sun, 18 Sep 2011) | 1 line
[FIX bp/37389] Fix comments moderation buttons which were broken on recent FireFox & IE following change of browser behaviour due to stricter implementation of image input buttons
r37409 | sylvieg | 2011-09-19 15:32:10 +0200 (Mon, 19 Sep 2011) | 1 line
[bp/r37408]escape

--- a/.gitattributes
+++ b/.gitattributes
@@ -3325,6 +3325,7 @@ pics/icons/arrow_small.png -text
 pics/icons/arrow_undo.png -text
 pics/icons/assign.png -text
 pics/icons/attach.png -text
+pics/icons/ban_remove.png -text svneol=unset#unset
 pics/icons/bell.png -text
 pics/icons/bliptv.png -text
 pics/icons/book.png -text
