--- a/.gitattributes
+++ b/.gitattributes
@@ -2368,6 +2368,7 @@ lib/prefs/comments.php -text
 lib/prefs/contact.php -text
 lib/prefs/cookie.php -text
 lib/prefs/count.php -text
+lib/prefs/dailyreports.php -text
 lib/prefs/default.php -text
 lib/prefs/desactive.php -text
 lib/prefs/direct.php -text
