--- a/.gitattributes
+++ b/.gitattributes
@@ -1402,6 +1402,7 @@ installer/schema/20110104_sefurl_trackeritem_tiki.sql -text
 installer/schema/20110413_blog_post_priv_default_value_tiki.sql -text
 installer/schema/20110610_readd_sefurl_index_left_tiki.php -text
 installer/schema/20110615_structure_alias_tiki.sql -text
+installer/schema/20110808_tracker_tiki.sql -text
 installer/schema/20110908_author_submission_tiki.sql -text
 installer/schema/99999999_image_plugins_kill_tiki.php -text
 installer/schema/index.php -text
