[QT] Quality Team Backport
r36674 | robertplummer | 2011-08-30 19:41:43 +0200 (Tue, 30 Aug 2011) | 2 lines
[FIX] Locations for sheet dependencies.
[FIX] Brought the external jquery.sheet_tiki for mods from 7 model

--- a/.gitattributes
+++ b/.gitattributes
@@ -2010,6 +2010,7 @@ lib/init/smarty.php -text
 lib/init/tra.php -text
 lib/integrator/index.php -text
 lib/integrator/integrator.php -text
+lib/jquery.sheet_tiki/menu.html -text
 lib/jquery_tiki/6.x_only/jquery.hoverIntent.js -text
 lib/jquery_tiki/brosho/tiki.brosho.css -text
 lib/jquery_tiki/brosho/tiki_brosho.js -text
@@ -2558,6 +2559,7 @@ lib/sheet/excel/writer/parser.php -text
 lib/sheet/excel/writer/validator.php -text
 lib/sheet/excel/writer/workbook.php -text
 lib/sheet/excel/writer/worksheet.php -text
+lib/sheet/grid.js -text
 lib/sheet/grid.php -text
 lib/sheet/include/core/APIC.php -text
 lib/sheet/include/core/APIClass.php -text
