--- a/.gitattributes
+++ b/.gitattributes
@@ -1565,6 +1565,7 @@ installer/schema/20111010_revert_fix_user_bookmarks_folders_key_tiki.php -text
 installer/schema/20111210_add_blog_hits_tiki.sql -text
 installer/schema/20111217_on_value_tracker_tiki.sql -text
 installer/schema/20120422_mime_tiki.sql -text
+installer/schema/20120426_perspectives_menu_entry_tiki.sql -text
 installer/schema/99999999_image_plugins_kill_tiki.php -text
 installer/schema/index.php -text
 installer/shell.php -text
