[FIX] Backporting 41177 and 41179 to improve the provisional password generation

--- a/.gitattributes
+++ b/.gitattributes
@@ -2342,6 +2342,24 @@ lib/phplayers_tiki/templates/layersmenu-sub_menu.ihtml -text
 lib/phplayers_tiki/templates/layersmenu-vertical_menu-galaxy.ihtml -text
 lib/phplayers_tiki/templates/layersmenu-vertical_menu.ihtml -text
 lib/phplayers_tiki/tiki-phplayers.php -text
+lib/phpsec/CHANGELOG.md -text
+lib/phpsec/LICENSE -text
+lib/phpsec/README.md -text
+lib/phpsec/phpsec.class.php -text
+lib/phpsec/phpsec/phpsec.cache.php -text
+lib/phpsec/phpsec/phpsec.crypt.php -text
+lib/phpsec/phpsec/phpsec.filter.php -text
+lib/phpsec/phpsec/phpsec.hash.php -text
+lib/phpsec/phpsec/phpsec.otp.php -text
+lib/phpsec/phpsec/phpsec.otpcard.php -text
+lib/phpsec/phpsec/phpsec.pw.php -text
+lib/phpsec/phpsec/phpsec.rand.php -text
+lib/phpsec/phpsec/phpsec.session.php -text
+lib/phpsec/phpsec/phpsec.store.filesystem.php -text
+lib/phpsec/phpsec/phpsec.store.pdo.php -text
+lib/phpsec/phpsec/phpsec.store.php -text
+lib/phpsec/phpsec/phpsec.token.php -text
+lib/phpsec/phpsec/phpsec.yubikey.php -text
 lib/polls/index.php -text
 lib/polls/polllib.php -text
 lib/polls/polllib_shared.php -text
